# Nullbot

./: .coverage  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
.github/workflows/: ci.yml
core/heuristic/: pe_analyzer.cpp  pe_analyzer.h  thresholds.h
core/quarantine/: quarantine.cpp  quarantine.h  vault_path.h
core/realtime/: amsi_provider.cpp  amsi_provider.h  directory_watcher.cpp  directory_watcher.h  nullbot_amsi_provider.def  realtime_protection.cpp  realtime_protection.h
core/scanner/: scanner.cpp  scanner.h
installer/: Bundle.wxs  License.rtf  NullBot.Installer.wixproj  Product.wxs
installer/Components/: AmsiProvider.wxs  ContextMenu.wxs  CoreFiles.wxs  Signatures.wxs  UI.wxs  UiAllFiles.wxs  Updater.wxs
installer/UI/: WixUI_NullBot.wxs
installer/ui_publish/: NullBot.deps.json
memory/: MEMORY.md  feedback_git_versioning.md
network/c2_detection/: beacon_math.h  c2_detector.cpp  c2_detector.h
network/dga/: dga_detector.cpp  dga_detector.h
network/monitor/: net_monitor.cpp  net_monitor.h
scripts/: install_scheduler.ps1  sign-dev.ps1
signatures/: sig_database.cpp  sig_database.h
signatures/rules/: botnet_agents.yar
signatures/updater/: requirements.txt  update_feeds.py
tests/: test_main.cpp  test_runner.h
tests/fixtures/: generate.py
tests/integration/: test_c2_integration.cpp  test_full_scan.cpp  test_quarantine.cpp
tests/unit/: test_c2_detector.cpp  test_dga.cpp  test_directory_watcher.cpp  test_heuristic.cpp  test_scanner.cpp  test_sig_database.cpp  test_updater.py
ui/: App.xaml  App.xaml.cs  NullBot.UI.csproj  app.manifest
ui/Assets/Themes/: Colors.xaml  Controls.xaml  Typography.xaml
ui/Controls/: KpiCard.xaml  KpiCard.xaml.cs  ShieldGauge.xaml  ShieldGauge.xaml.cs  ThreatRow.xaml  ThreatRow.xaml.cs
ui/Converters/: BytesToSizeConverter.cs  ConnectionStatusToColorConverter.cs  InverseBoolConverter.cs  RelativeTimeConverter.cs  SeverityToColorConverter.cs
ui/Models/: NetworkConnection.cs  ProtectionStatus.cs  QuarantinedItem.cs  ScanResult.cs  ThreatDetection.cs
ui/Services/: CliRunner.cs  ICliRunner.cs  INotificationService.cs  IQuarantineDbReader.cs  ISignaturesDbReader.cs  NotificationService.cs  QuarantineDbReader.cs  SignaturesDbReader.cs
ui/ViewModels/: DashboardViewModel.cs  MainWindowViewModel.cs  NetworkViewModel.cs  QuarantineViewModel.cs  RealtimeViewModel.cs  ScanModeConverter.cs  ScanViewModel.cs  SettingsViewModel.cs  SidebarItemViewModel.cs
ui/Views/: DashboardView.xaml  DashboardView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NetworkView.xaml  NetworkView.xaml.cs  QuarantineView.xaml  QuarantineView.xaml.cs  RealtimeView.xaml  RealtimeView.xaml.cs  ScanView.xaml  ScanView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
